json optimization and bugfix