@@ -1,17 +1,20 @@
 package frc.robot.constants;
 
 import com.google.gson.Gson;
+import com.google.gson.GsonBuilder;
+import com.google.gson.JsonSyntaxException;
 import edu.wpi.first.wpilibj.Filesystem;
 
 import java.io.IOException;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
+import java.nio.file.Path;
 import java.nio.file.Paths;
 
 //Static class, JsonHandler, uses gson to read and write the constants.json file
-public class JsonHandler{
+public class JsonHandler {
     private static final String path = Filesystem.getOperatingDirectory() + "/constants.json";
-    private static final Gson gson = new Gson();
+    private static final Gson gson = new GsonBuilder().setPrettyPrinting().create();
 
     /**
      * Reads the constants.json file using gson and returns the constants object.
@@ -19,20 +22,26 @@ public class JsonHandler{
      *
      * @return The constants object
      */
-    public static LocalConstants getConstants(){
-        System.out.println("Reading constants file from " + path);
-        try{
-            if(Files.exists(Paths.get(path))){
-                return gson.fromJson(new String(Files.readAllBytes(Paths.get(path))), LocalConstants.class);
-            } else{
+    public static LocalConstants getConstants() {
+        LocalConstants constants = new LocalConstants();
+        try {
+            if(Files.exists(Paths.get(path))) {
+                //read the file and write it back, in case the json is not valid.
+                String json = Files.readString(Paths.get(path));
+                constants = gson.fromJson(json, LocalConstants.class);
+                System.out.println("Constants file read from " + path);
+            } else {
                 Files.createFile(Paths.get(path));
                 System.out.println("Constants file not found, creating new file at " + path);
-                write();
             }
-        } catch(IOException e){
+        } catch(IOException e) {
+            e.printStackTrace();
+        } catch(JsonSyntaxException e) {
+            System.out.println("Constants file is not valid JSON, creating new file at " + path);
             e.printStackTrace();
         }
-        return new LocalConstants();
+        constants.write();
+        return constants;
     }
 
     /**
@@ -40,13 +49,13 @@ public class JsonHandler{
      *
      * @param constants The constants to write
      */
-    public static void write(LocalConstants constants){
-        try{
+    public static void write(LocalConstants constants) {
+        try {
             String json = gson.toJson(constants);
-            System.out.println(json);
-            Files.write(Paths.get(path), json.getBytes(StandardCharsets.UTF_8));
+            Files.write(Path.of(path), json.getBytes(StandardCharsets.UTF_8));
             System.out.println("Constants file written to " + path);
-        } catch(IOException e){
+        } catch(IOException e) {
+            System.out.println("Error writing constants file to " + path);
             e.printStackTrace();
         }
     }
@@ -54,7 +63,7 @@ public class JsonHandler{
     /**
      * Writes the default constants to the constants.json file using gson
      */
-    public static void write(){
+    public static void write() {
         write(new LocalConstants());
     }
 }
